# dagster_tutorial

./: .envrc  flake.nix  pyproject.toml  setup.py
.direnv/: flake-profile-50bcf2a9de6e2e11b81791862a471d3be9fe0bd0  flake-profile-50bcf2a9de6e2e11b81791862a471d3be9fe0bd0.rc  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: d2fvqzy2hrjl3c8a5mdqyl41jhw7wkl4-source  jxknfmvsq27xvjqca8zgkmqjw7289hcb-source
.tmp_dagster_home_xe8_bp88/history/: runs.db
.tmp_dagster_home_xe8_bp88/history/runs/: 03f12725-b2e6-488b-aa7a-75bc3609d3a0.db  04ac8ddc-ce48-42b8-a439-2aab74b5c23d.db  09c8dedf-e262-4177-ba93-c4a1261a8bcf.db  0d8d4023-a463-4df6-a778-7cf52f6dc90e.db  204e1c1e-edd6-4b2e-9e63-3265ed0121b3.db  25ee3aee-153d-4d08-b936-29d9c8c9d7ba.db  2610a869-8129-4fc9-b189-b3703460d7f3.db  37478c56-987d-4c40-b3e8-21ce1dda472c.db  484880ca-166e-458c-a37a-152e14634491.db  565557a0-aa82-4084-8dbe-12ee4cd5f0e9.db  59b581da-550c-433a-a091-79eb1d737160.db  5e030458-be1f-452f-b648-c86812894830.db  68f2ff7c-ff21-443e-847e-49c589880f0d.db  690f0493-26bb-4e71-99d5-bec6fd1e1ffa.db  6b483718-dab7-4044-b253-855d0539b730.db  6e53ca34-62cf-4c21-a06d-8423640c7540.db  847d5e8f-f324-41e0-bd1f-ec97ed7c15fc.db  88935302-f9dd-4ae9-8bb6-9ff40de6382e.db  9086482b-c87b-4a7c-9abc-7534b41cc970.db  b20d6bd2-5538-4981-9137-4460e13509a4.db  index.db  (+8 more)
.tmp_dagster_home_xe8_bp88/schedules/: schedules.db
dagster_tutorial.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: mydb.duckdb
etl_tutorial/: assets.py  definitions.py
(+35 files in other folders)
